memoized story body to prevent jumps of the caret and more

--- a/apps/nextjs/styles/globals.css
+++ b/apps/nextjs/styles/globals.css
@@ -105,7 +105,7 @@ textarea:invalid {
 }
 
 .palletOption {
-  font-size: 1.7rem;
+  font-size: 20px;
   color: #696969;
   cursor: pointer;
 }
